Added get endpoint for catalog entries
